--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,1 +1,6 @@
-@import './base/_base.scss';
+@import './base/settings';
+@import './base/base';
+@import './components/container';
+@import './components/header';
+@import './components/contact-add-new';
+@import './components/contacts';
