--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,3 +4,4 @@
 @import './components/header';
 @import './components/contact-add-new';
 @import './components/contacts';
+@import './components/footer';
